--- a/shared/css/header_footer.css
+++ b/shared/css/header_footer.css
@@ -28,7 +28,7 @@
     padding: 48px;
 }
 
-.logo img {
+.main_header > a img {
     height: 28px;
 }
 
